--- a/projects/style.css
+++ b/projects/style.css
@@ -367,6 +367,10 @@ header .navbar ul li a:hover {
   .work .box-container {
     margin: 0;
   }
+  .work .box-container .tilt {
+    width: 350px;
+    margin: 1rem;
+  }
 
   .work .box-container .grid-item .box {
     width: 95% !important;
