--- a/projects/style.css
+++ b/projects/style.css
@@ -413,6 +413,17 @@ header .navbar ul li a:hover {
     width: 90%;
     margin: 0 auto;
   }
+  .work .box-container .box .content .tag {
+    height: 4.5rem;
+  }
+
+  .work .box-container .box .content .tag h3 {
+    font-size: 1.6rem;
+  }
+  .work .box-container .box .content {
+    top: 78%;
+  }
+  
   /* Adjust paragraph font-size inside project descriptions */
   .work .desc p {
     font-size: 1.2rem;
